--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
     <!-- Custom Theme Style -->
     <link href="./assets/css/custom.min.css" rel="stylesheet">
 
+    <script src="./assets/js/echarts.min.js"></script>
+
   </head>
 
   <body class="nav-md">
@@ -49,7 +51,12 @@
     <script src="./assets/js/jquery.hotkeys.js"></script>
     <script src="./assets/js/prettify.js"></script>
  
-     
+    <script src="./assets/js/validator.js"></script>
+
+    <script src="./assets/js/icheck.min.js"></script>
+  
+    <script src="./assets/js/jquery.vmap.js"></script>
+    <script src="./assets/js/jquery.vmap.world.js"></script>
 
   </body>
 </html>
